--- a/index.html
+++ b/index.html
@@ -149,3 +149,31 @@
     <footer></footer>
   </body>
 </html>
+<div class="videos">
+  <div class="video">
+    <img src="/lesson6/PIC/video1.png" alt="" class="videozurag" />
+    <div class="dis">
+      <img src="/lesson6/PIC/pf1.png" alt="" class="pfzurag" />
+      <div class="v1">
+        <h3>
+                  </h3>
+        <p>stampylonghead</p>
+        <p>254 watching now</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="videos">
+  <div class="video">
+    <img src="/lesson6/PIC/video1.png" alt="" class="videozurag" />
+    <div class="dis">
+      <img src="/lesson6/PIC/pf1.png" alt="" class="pfzurag" />
+      <div class="v1">
+        <h3>
+                  </h3>
+        <p>stampylonghead</p>
+        <p>254 watching now</p>
+      </div>
+    </div>
+  </div>
+</div>
