--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main>
       <div class="top">
         <div class="Youtube">
-          <img src="/lesson6/icons/menu.svg" alt="">
-          <img src="/lesson6/PIC/Screenshot 2023-10-06 182814.png" alt="" />
+          <img src="icons/menu.svg" alt="">
+          <img src="PIC/Screenshot 2023-10-06 182814.png" alt="" />
           <div>
             <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,25 +22,25 @@
         </div>
         </div>
         <div class="Search">
-          <img src="/lesson6/icons/search.svg" alt="">
+          <img src="icons/search.svg" alt="">
           <h4>Search</h4>
         </div>
         <div>
-        <a href=""><img src="/lesson6/PIC/creater.png" alt=""></a>
-        <a href=""><img src="/lesson6/PIC/nof.png" alt=""></a>
-        <a href=""><img src="/lesson6/PIC/hehe.png" alt=""></a>
+        <a href=""><img src="PIC/creater.png" alt=""></a>
+        <a href=""><img src="PIC/nof.png" alt=""></a>
+        <a href=""><img src="PIC/hehe.png" alt=""></a>
       </div>
       </div>
       <div class="container">
         <div class="left">
         
-           <div class="left2"><img src="/lesson6/icons/home.svg" alt="home"><a href=""><h4>Home</h4></a></div>
-            <div class="left3"><img src="/lesson6/icons/library.svg" alt=""><a href=""><h4>Library</h4></a></div>
-            <div class="left4"><img src="/lesson6/icons/history.svg" alt=""><a href=""><h4>History</h4></a></div>
-            <div class="left5"><img src="/lesson6/icons/trending.svg" alt=""><a href=""><h4>Trending</h4></a></div>
-            <div class="left6"><img src="/lesson6/icons/music.svg" alt=""><a href=""><h4>Music</h4></a></div>
-            <div class="left7"><img src="/lesson6/icons/live.svg" alt=""><a href=""><h4>Live</h4></a></div>
-            <div class="left8"><img src="/lesson6/icons/gaming.svg" alt=""><a href=""><h4>Gaming</h4></a></div>
+           <div class="left2"><img src="icons/home.svg" alt="home"><a href=""><h4>Home</h4></a></div>
+            <div class="left3"><img src="icons/library.svg" alt=""><a href=""><h4>Library</h4></a></div>
+            <div class="left4"><img src="icons/history.svg" alt=""><a href=""><h4>History</h4></a></div>
+            <div class="left5"><img src="icons/trending.svg" alt=""><a href=""><h4>Trending</h4></a></div>
+            <div class="left6"><img src="icons/music.svg" alt=""><a href=""><h4>Music</h4></a></div>
+            <div class="left7"><img src="icons/live.svg" alt=""><a href=""><h4>Live</h4></a></div>
+            <div class="left8"><img src="icons/gaming.svg" alt=""><a href=""><h4>Gaming</h4></a></div>
           
         </div>
         <div class="right">
@@ -56,9 +56,9 @@
           <div class="hi">
           <div class="videos">
             <div class="video">
-              <img src="/lesson6/PIC/video1.png" alt="" class="videozurag" />
+              <img src="PIC/video1.png" alt="" class="videozurag" />
               <div class="dis">
-                <img src="/lesson6/PIC/pf1.png" alt="" class="pfzurag" />
+                <img src="PIC/pf1.png" alt="" class="pfzurag" />
                 <div class="v1">
                   <h3>
                             </h3>
@@ -71,9 +71,9 @@
        <div class="videos">
         <div class="video">
           <div class="my">
-          <img src="/lesson6/PIC/we live we love we lie.jpg" alt="" class="videozurag" width="300px" height="169px" />
+          <img src="PIC/we live we love we lie.jpg" alt="" class="videozurag" width="300px" height="169px" />
           <div class="dis">
-            <img src="/lesson6/PIC/frog.webp" alt="" class="pfzurag" />
+            <img src="PIC/frog.webp" alt="" class="pfzurag" />
             <div class="v1">
               <h3>
                 WE LIVE WE LOVE WE LIE NEXT PART
@@ -86,9 +86,9 @@
         </div>
    </div>          <div class="videos">
     <div class="video">
-      <img src="/lesson6/PIC/gri.jpg" alt="" class="videozurag" />
+      <img src="PIC/gri.jpg" alt="" class="videozurag" />
       <div class="dis">
-        <img src="/lesson6/PIC/gripof.jpg" alt="" class="pfzurag" />
+        <img src="PIC/gripof.jpg" alt="" class="pfzurag" />
         <div class="v1">
           <h3>
             Tam bol Aimar ym baina
@@ -100,9 +100,9 @@
     </div>
 </div>          <div class="videos">
   <div class="video">
-    <img src="/lesson6/PIC/mio.jpg" alt="" class="videozurag" />
+    <img src="PIC/mio.jpg" alt="" class="videozurag" />
     <div class="dis">
-      <img src="/lesson6/PIC/miopof.jpg" alt="" class="pfzurag" />
+      <img src="PIC/miopof.jpg" alt="" class="pfzurag" />
       <div class="v1">
         <h3>
           MIO 
@@ -114,9 +114,9 @@
   </div>
 </div>          <div class="videos">
   <div class="video">
-    <img src="/lesson6/PIC/cr.webp" alt="" class="videozurag" />
+    <img src="PIC/cr.webp" alt="" class="videozurag" />
     <div class="dis">
-      <img src="/lesson6/PIC/cr7pof.jpg" alt="" class="pfzurag" />
+      <img src="PIC/cr7pof.jpg" alt="" class="pfzurag" />
       <div class="v1">
         <h3>
           OOOOHH Ronaldo is fireee
@@ -129,9 +129,9 @@
 </div>
 <div class="videos">
   <div class="video">
-    <img src="/lesson6/PIC/messi.png" alt="" class="videozurag" />
+    <img src="PIC/messi.png" alt="" class="videozurag" />
     <div class="dis">
-      <img src="/lesson6/PIC/messipf.jpg" alt="" class="pfzurag" />
+      <img src="PIC/messipf.jpg" alt="" class="pfzurag" />
       <div class="v1">
         <h3>
           MeSSI WHITE THE PINK COLHOTS ON XD
